# llm-suggestions

./: .env.backup  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yaml  main.py  pyproject.toml  test.py
app/api/v1/: profiling_suggestion.py
app/core/: config.py  logging.py
app/db/: connection_to_trino.py  postgres.py  schema.py
app/llm_suggestions/: llm_client.py  prompts.py
app/model/: discovery.py  llm_sugg_models.py  profiling_suggestion.py  trino_data.py
app/services/: keycloak_service.py  llm_sugg_service.py  postgres_service.py  profiling_suggestion_service.py  trino_source_service.py
s3_connction/: connect_to_s3.py
tests/: test_profiling_suggestion_service.py
