[project]
name = "llm-dq-suggestions"
version = "0.1.0"
description = "LLM-powered data quality suggestions based on profiling data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.36.0",
    "sqlalchemy~=1.4.50",
    "pydantic==2.8.2",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "psycopg2-binary>=2.9.10",
    "trino~=0.328.0",
    "python-dotenv>=1.1.1",
    "loguru~=0.7.2",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

